[package]
name = "size-of"
version = "0.1.6"
description = "A crate for measuring the total memory usage of an object"
authors = ["Yasser Tahiri <yasser@pragma.build>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = [
    "memory",
    "heapsize",
    "profiling",
    "memory-usage",
    "memory-profiling",
]
categories = [
    "no-std",
    "development-tools",
    "memory-management",
    "development-tools::debugging",
    "development-tools::profiling",
]

[features]
default = ["derive", "std"]
std = []
derive = ["size-of-derive"]
time-std = ["time", "time/std", "std"]
ahash-std = ["ahash", "ahash/std", "std"]
xxhash-xxh3 = ["xxhash-rust", "xxhash-rust/xxh3"]
xxhash-xxh32 = ["xxhash-rust", "xxhash-rust/xxh32"]
xxhash-xxh64 = ["xxhash-rust", "xxhash-rust/xxh64"]
portable-simd = []
stdsimd = []

[dependencies]
size-of-derive = { version = "0.1.2", path = "./size-of-derive", optional = true }

# Crate support
ahash = { version = "0.8.0", optional = true }
arcstr = { version = "1.1.4", optional = true }
fxhash = { version = "0.2.1", optional = true }
chrono = { version = "0.4.38", default-features = false, features = ["rkyv-64", "serde", "clock"], optional = true }
hashbrown = { version = "0.13.2", optional = true }
bigdecimal = { version = "0.3.0", optional = true }
xxhash-rust = { version = "0.8.6", optional = true }
rust_decimal = { package = "feldera_rust_decimal", version = "1.33.1-feldera.1", optional = true }
ordered-float = { version = "3.0.0", optional = true, default-features = false, features = ["std"] }
time = { version = "0.3.15", default-features = false, optional = true }
num-bigint = { version = "0.4.3", default-features = false, optional = true }

[dev-dependencies]
trybuild = "1.0.64"
size-of-derive = { version = "0.1.2", path = "./size-of-derive" }

[workspace]
members = ["size-of-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
